--- a/.pylintrc
+++ b/.pylintrc
@@ -7,6 +7,9 @@
 
 [MASTER]
 
+[pre-commit-hook]
+limit=10.0
+
 # Files or directories to be skipped. They should be base names, not paths.
 ignore=third_party
 
