--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ fonttools==4.28.2
 greenlet==1.1.2
 idna==3.3
 IMDbPY==2021.4.18
+joblib==1.1.0
 kiwisolver==1.3.2
 lxml==4.6.3
 matplotlib==3.4.3
@@ -14,7 +15,7 @@ packaging==21.3
 pandas==1.3.4
 pandasql==0.7.3
 Pillow==8.4.0
-presto-python-client==0.8.
+presto-python-client==0.8.2
 progressbar2==3.55.0
 psycopg2==2.9.1
 psycopg2-binary==2.9.2
@@ -23,15 +24,15 @@ python-dateutil==2.8.2
 python-utils==2.5.6
 pytz==2021.3
 requests==2.26.0
+scikit-learn==1.0.2
 scipy==1.7.1
 seaborn==0.11.2
 setuptools-scm==6.3.2
 six==1.16.0
+sklearn==0.0
 SQLAlchemy==1.4.26
+threadpoolctl==3.1.0
 tomli==1.2.2
+torch==1.8.0+cpu
+typing-extensions==4.1.1
 urllib3==1.26.7
-
-setuptools~=59.4.0
-joblib~=1.1.0
-sklearn~=0.0
-scikit-learn~=1.0.1
