--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "Bao-Presto-Integration"]
 	path = Bao-Presto-Integration
 	url = git@github.com:christophanneser/Bao-Presto-Integration.git
+    branch = bao-research
